cabal-version:      3.4
name:               blaze-generator
version:            0.1.0.0
synopsis:           Generator for blaze-html library.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tushar Adhatrao
maintainer:         tusharadhatrao@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                      , HTML.Common.Types
                      , HTML.Core
                      , Blaze.Common.Types
                      , Blaze.Core
    build-depends:    base ^>=4.17.2.1
                      , text
                      , megaparsec
                      , filepath
                      , containers
                      , directory
    hs-source-dirs:   src
    default-language: GHC2021

executable blaze-generator
    import:           warnings

    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        blaze-generator

    hs-source-dirs:   app
    default-language: GHC2021

test-suite blaze-generator-test
    import:           warnings

    default-language: GHC2021
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        blaze-generator
